--- a/global.css
+++ b/global.css
@@ -1,29 +1,30 @@
-th, td      {
-               vertical-align: top;
-               text-align: right;
-               font-size:large;
-               // border: 1px solid black;
-            }     /* Don't center table cells  */
-#converted  { color: red; font-weight: bold; font-size:large;          }     /* Calculated values in bold */
-input       {
-              text-align: right;       /* Align input to the right  */
-              border: none;
-              border-radius: 20px 20px 20px 20px;
-              padding: 5px  5px;
-              font-size:large;       }
-body
-{
- background-color:#b0c4de;  /* blue */
- font-size:large;
- font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+body {
+  background-color : #F2F22E;
 }
 
 h1 {
-    font-weight: normal;
-    font-family: "Brush Script MT", cursive;
-    background: #3C5681;
-    padding: 5px 15px;
-    color: white;
-    display:inline-block;
-    border-radius: 10px 10px 10px 10px;
+  font: oblique bold 150% cursive;
+}
+
+th {
+  font: oblique bold 120% cursive;
+}
+
+#primero {
+  border : solid;
+  width : 140px;
+  height : 120px;
+  margin : auto;
+  margin-bottom : 20px;
+  background-image: url(http://i.imgur.com/UdLkjqu.jpg);
+  background-size:cover;
+  box-shadow: 5px 5px 5px #1F1F1C;
+}
+
+h1 {
+  text-align : center;
+}
+
+table {
+  margin : auto;
 }
